objects/Order_Refund_Credit_Case_Status_Setting__mdt.object
<CustomObject>
    <description>Configuration for which Case statuses will handle which actions on Order Refund Credit</description>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should this process run?</description>
        <inlineHelpText>Should this process run?</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <defaultValue>&quot;Case&quot;</defaultValue>
        <description>The Object the process is running on</description>
        <inlineHelpText>The Object the Process is running on</inlineHelpText>
        <label>Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                    <default>true</default>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>Order Refund Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <description>The apex process that will be run</description>
        <inlineHelpText>The apex process that will be run</inlineHelpText>
        <label>Process</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Set ORC Approval Status</fullName>
                    <default>true</default>
                    <label>Set ORC Approval Status</label>
                </value>
                <value>
                    <fullName>Set Case Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The Status of the Record</description>
        <inlineHelpText>The Status of the Record</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Order Refund Credit Case Status Setting</label>
    <listViews>
        <fullName>All_with_Info</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Object__c</columns>
        <columns>Status__c</columns>
        <columns>Process__c</columns>
        <columns>Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Info</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Order Refund Credit Case Status Settings</pluralLabel>
</CustomObject>